# build-a-llm-from-scratch-rs

./: .gitignore  Cargo.toml  README.md  TODO.md  play.sh  setup.sh
crates/chapter02/: Cargo.toml  README.md
crates/chapter02/src/: lib.rs  strings.rs  verdict.rs
crates/chapter02/src/dataset/: mod.rs
crates/chapter02/src/tokenizer/: mod.rs  v1.rs  v2.rs
crates/chapter03/: Cargo.toml  README.md
crates/chapter03/src/attention/: causal.rs  mod.rs  multi_head.rs  multi_head_wrapper.rs  v1.rs  v2.rs
crates/chapter04/: Cargo.toml
crates/chapter04/src/: config.rs  feed_forward.rs  gelu.rs  lib.rs  model.rs  norm.rs  transformer.rs  utils.rs
crates/chapter04/src/model/: mod.rs
crates/chapter04/src/norm/: dummy.rs  mod.rs
crates/chapter04/src/transformer/: dummy.rs  mod.rs
crates/chapter05/: .gitignore  Cargo.toml  README.md  TODO.md
crates/chapter05/examples/: multinomial.rs
crates/chapter05/gpt2/: README.md  hello.py  main.py  pyproject.toml
crates/chapter05/src/: config.rs  gpt2.rs  lib.rs  loss.rs  rand.rs  utils.rs  x.rs
crates/chapter05/tests/: burn_cross_entropy.rs  cross_entropy.rs  x.rs
crates/chapter06/: .gitignore  Cargo.toml  README.md  build.rs  colab.ipynb  download-sms-spam-collection.py
crates/chapter06/gpt2/: .gitignore
crates/chapter06/src/: lib.rs  loss.rs  utils.rs
crates/chapter06/src/dataset/: batcher.rs  mod.rs
crates/chapter07/: .gitignore  Cargo.toml
crates/chapter07/gpt2/: main.py
crates/chapter07/src/: lib.rs  loss.rs  ollama.rs  utils.rs
crates/chapter07/src/dataset/: batcher.rs  mod.rs
crates/minikit/: Cargo.toml
crates/minikit/src/: cuda.rs
docker/: Dockerfile  README.md  dockerize.sh
