[workspace]
members = ["crates/*"]

resolver = "3"

[workspace.dependencies]
anyhow = "1"
burn = "0.18"
plotters = "0.3"
regex = "1"
reqwest = "0.12"
serde = "1.0"
serde_json = "1.0"

chapter02.path = "crates/chapter02"
chapter03.path = "crates/chapter03"
chapter04.path = "crates/chapter04"

[workspace.dependencies.tiktoken]
features = ["ext"]
git = "https://github.com/sammyne/tiktoken.git"
rev = "5eb293a"
