[package]
name = "chapter02"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
regex.workspace = true
serde_json.workspace = true
tiktoken.workspace = true

[dependencies.burn]
features = ["dataset", "ndarray"]
workspace = true

[dependencies.reqwest]
features = ["blocking"]
workspace = true
