[package]
name = "chapter05"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true  
tiktoken.workspace = true  

chapter02.workspace = true  
chapter04.workspace = true  

rand = "0.8"
crc32fast = "1.4.2"

[dependencies.burn]
features = ["autodiff", "ndarray", "cuda"]
workspace = true  
