[package]
name = "chapter05"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true  
serde.workspace = true  
serde_json.workspace = true  
tiktoken.workspace = true  

chapter02.workspace = true  
chapter04.workspace = true  

rand = "0.8"
plotters.workspace = true
minikit.workspace = true

[dependencies.burn]
features = ["autodiff", "ndarray", "tch"]
workspace = true  
