[package]
name = "chapter06"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chapter02.workspace = true
chapter04.workspace = true
chapter05 = { version = "0.1.0", path = "../chapter05" }
minikit.workspace = true
plotters.workspace = true
serde.workspace = true
serde_json.workspace = true
tiktoken.workspace = true

[dependencies.burn]
features = ["autodiff", "ndarray", "tch"]
workspace = true  

[dependencies.polars]
features = ["dtype-struct", "lazy", "random", "strings"]
version = "0.49"

[build-dependencies]
anyhow.workspace = true
zip = "4.6.0"

[build-dependencies.reqwest]
features = ["blocking"]
workspace = true
