[package]
name = "chapter07"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chapter02.workspace = true
serde_json.workspace = true
tiktoken.workspace = true

[dependencies.burn]
features = ["autodiff", "ndarray", "tch"]
workspace = true  

[dependencies.reqwest]
features = ["blocking"]
workspace = true

[dependencies.serde]
features = ["derive"]
workspace = true
