[package]
name = "chapter07"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chapter02.workspace = true
chapter04.workspace = true
chapter05 = { version = "0.1.0", path = "../chapter05" }
chapter06 = { version = "0.1.0", path = "../chapter06" }
indicatif = "0.18.0"
serde_json.workspace = true
tiktoken.workspace = true

[dependencies.burn]
features = ["autodiff", "ndarray", "tch"]
workspace = true  

[dependencies.clap]
features = ["derive"]
version = "4.5"

[dependencies.reqwest]
features = ["blocking"]
workspace = true

[dependencies.serde]
features = ["derive"]
workspace = true
